crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_accept_all_confirm_live_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 16 files · 18 hunks  standalone  [Accept All]                         watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │beta  main · 12 files                                                  │"
"│  main · 3 files          │~/W/beta                                                               │"
"│  M f1  +1 −1             │  A g01  +1 −0                                                         │"
"│  M f2  +1 −0             │  A g02  +1 −0                                                         │"
"│  M parse.rs  +10 −2      │  A g03  +1 −0                                                         │"
"│──────────────────────────│  A g04  +1 −0                                                         │"
"│beta                      │  A g05  +1 −0                                                         │"
"│  main · 12 files         │  A g06  +1 −0                                                         │"
"│  A g01  +1 −0            │  A g07  +1 −0                                                         │"
"│  A g02  +1 −0            │  A g08  +1 −0                                                         │"
"│  A g03  +1 −0            │  A ┌ accept ──────────────────────────┐                               │"
"│  A g04  +1 −0            │  A │ Accept all 12 files in beta?     │                               │"
"│  A g05  +1 −0            │  A │ 1 grouped upstream · 0 collapsed │                               │"
"│  A g06  +1 −0            │  A │                                  │                               │"
"│  A g07  +1 −0            │    │ y / ⏎ confirm    n / Esc cancel  │                               │"
"│  A g08  +1 −0            │    └──────────────────────────────────┘                               │"
"│  A g09  +1 −0            │                                                                       │"
"│  A g10  +1 −0            │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"y confirm  n cancel  q quit                                                                         "
