crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_accept_all_confirm_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..39 Reset Reset BOLD
0 41..51 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..32 Reset Reset BOLD
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
3 28..36 Reset Reset DIM
4 0..1 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
4 37..39 Green Reset -
4 40..42 Red Reset -
5 0..1 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
5 37..39 Green Reset -
5 40..42 Red Reset -
6 0..1 Cyan Reset -
6 15..18 Green Reset -
6 19..21 Red Reset -
6 27..28 Cyan Reset -
6 37..39 Green Reset -
6 40..42 Red Reset -
7 0..1 Cyan Reset -
7 1..27 Reset Reset DIM
7 27..28 Cyan Reset -
7 37..39 Green Reset -
7 40..42 Red Reset -
8 0..1 Cyan Reset -
8 1..5 Reset Reset BOLD|REVERSED
8 5..27 Reset Reset REVERSED
8 27..28 Cyan Reset -
8 37..39 Green Reset -
8 40..42 Red Reset -
9 0..1 Cyan Reset -
9 27..28 Cyan Reset -
9 37..39 Green Reset -
9 40..42 Red Reset -
10 0..1 Cyan Reset -
10 10..12 Green Reset -
10 13..15 Red Reset -
10 27..28 Cyan Reset -
10 37..39 Green Reset -
10 40..42 Red Reset -
11 0..1 Cyan Reset -
11 10..12 Green Reset -
11 13..15 Red Reset -
11 27..28 Cyan Reset -
11 37..39 Green Reset -
11 40..42 Red Reset -
12 0..1 Cyan Reset -
12 10..12 Green Reset -
12 13..15 Red Reset -
12 27..28 Cyan Reset -
12 32..68 Cyan Reset -
13 0..1 Cyan Reset -
13 10..12 Green Reset -
13 13..15 Red Reset -
13 27..28 Cyan Reset -
13 32..33 Cyan Reset -
13 34..62 Reset Reset BOLD
13 67..68 Cyan Reset -
14 0..1 Cyan Reset -
14 10..12 Green Reset -
14 13..15 Red Reset -
14 27..28 Cyan Reset -
14 32..33 Cyan Reset -
14 67..68 Cyan Reset -
15 0..1 Cyan Reset -
15 10..12 Green Reset -
15 13..15 Red Reset -
15 27..28 Cyan Reset -
15 32..33 Cyan Reset -
15 67..68 Cyan Reset -
16 0..1 Cyan Reset -
16 10..12 Green Reset -
16 13..15 Red Reset -
16 27..28 Cyan Reset -
16 32..33 Cyan Reset -
16 67..68 Cyan Reset -
17 0..1 Cyan Reset -
17 10..12 Green Reset -
17 13..15 Red Reset -
17 27..28 Cyan Reset -
17 32..68 Cyan Reset -
18 0..1 Cyan Reset -
18 10..12 Green Reset -
18 13..15 Red Reset -
18 27..28 Cyan Reset -
19 0..1 Cyan Reset -
19 9..11 Green Reset -
19 12..14 Red Reset -
19 14..26 Reset Reset DIM
19 27..28 Cyan Reset -
20 0..1 Cyan Reset -
20 9..11 Green Reset -
20 12..14 Red Reset -
20 14..23 Reset Reset DIM
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 27..28 Cyan Reset -
22 0..1 Cyan Reset -
22 1..27 Reset Reset DIM
22 27..28 Cyan Reset -
23 0..1 Cyan Reset -
23 1..8 Reset Reset BOLD
23 27..28 Cyan Reset -
24 0..1 Cyan Reset -
24 27..28 Cyan Reset -
25 0..1 Cyan Reset -
25 12..14 Green Reset -
25 15..17 Red Reset -
25 27..28 Cyan Reset -
26 0..1 Cyan Reset -
26 27..28 Cyan Reset -
27 0..1 Cyan Reset -
27 27..28 Cyan Reset -
28 0..28 Cyan Reset -
29 0..27 Reset Reset DIM
