crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_accept_all_no_confirm_at_10_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  0 repos · 0 files · 0 hunks  [Accept All]                                       watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│                          │nothing pending across 3 roots                                         │"
"│                          │  alpha  main                                                          │"
"│                          │  beta  main                                                           │"
"│                          │  notes  draft                                                         │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"accepted 10 files in alpha · 0s                                                                     "
