crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_accept_controls_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 4 files · 5 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │f1  M  +2 −2                           [A accept file] [U restore file]│"
"│  main · 1 file           │@@ -2,7 +2,7 @@                         [a accept] [u restore] [m flag]│"
"│  M f1  +2 −2             │ line 2                                                                │"
"│──────────────────────────│ line 3                                                                │"
"│beta                      │ line 4                                                                │"
"│  main · 2 files          │-line 5                                                                │"
"│  A u1  +1 −0  [upstream] │+LINE 5 (edited)                                                       │"
"│  A u2  +2 −0  [mixed]    │ line 6                                                                │"
"│  [upstream] 1 file       │ line 7                                                                │"
"│──────────────────────────│ line 8                                                                │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │@@ -42,7 +42,7 @@                       [a accept] [u restore] [m flag]│"
"│  M n2.md  +2 −0          │ line 42                                                               │"
"│                          │ line 43                                                               │"
"│                          │ line 44                                                               │"
"│                          │-line 45                                                               │"
"│                          │+LINE 45 (edited)                                                      │"
"│                          │ line 46                                                               │"
"│                          │ line 47                                                               │"
"│                          │ line 48                                                               │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"↑↓ scroll  ← back  n/p hunk  a accept hunk  A accept file  z undo  t hide empty  ? help  q quit     "
