crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_accept_last_file_collapses_repo_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  2 repos · 3 files · 3 hunks  [Accept All]                                       watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│beta                      │u1  A  +1 −0  [upstream]                                [A accept file]│"
"│  main · 2 files          │@@ -0,0 +1 @@                                                [a accept]│"
"│  A u1  +1 −0  [upstream] │+up1                                                                   │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  upstream · 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│notes                     │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"accepted f2 · 0s                                                                                    "
