crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_accept_last_file_lands_on_the_repo_row_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"lastcall  3 repos · 3 files · 3 hunks  standalone  [Accept All]                           watching W"
"┌──────────────────────────┬───────────────────────────────────────────────────────────────────────┐"
"│alpha                     │nothing pending in alpha                                               │"
"│  main · 0 files          │  main · 0 files                                                       │"
"│──────────────────────────│~/W/alpha                                                              │"
"│beta                      │                                                                       │"
"│  main · 2 files          │                                                                       │"
"│  A u1  +1 −0  [upstream] │                                                                       │"
"│  A u2  +2 −0  [mixed]    │                                                                       │"
"│  [upstream] 1 file       │                                                                       │"
"│──────────────────────────│                                                                       │"
"│W/notes                   │                                                                       │"
"│  draft · 1 file          │                                                                       │"
"│  M n2.md  +2 −0          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"│                          │                                                                       │"
"└──────────────────────────┴───────────────────────────────────────────────────────────────────────┘"
"accepted src/parse.rs · 0s                                                                          "
