crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_accept_last_file_lands_on_the_repo_row_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..37 Reset Reset BOLD
0 39..49 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD|DIM|REVERSED
2 6..27 Reset Reset REVERSED
2 27..28 Cyan Reset -
2 28..52 Reset Reset BOLD
3 0..1 Cyan Reset -
3 1..17 Reset Reset DIM
3 27..28 Cyan Reset -
3 28..44 Reset Reset DIM
4 0..1 Cyan Reset -
4 1..27 Reset Reset DIM
4 27..28 Cyan Reset -
5 0..1 Cyan Reset -
5 1..5 Reset Reset BOLD
5 27..28 Cyan Reset -
6 0..1 Cyan Reset -
6 27..28 Cyan Reset -
7 0..1 Cyan Reset -
7 9..11 Green Reset -
7 12..14 Red Reset -
7 14..26 Reset Reset DIM
7 27..28 Cyan Reset -
8 0..1 Cyan Reset -
8 9..11 Green Reset -
8 12..14 Red Reset -
8 14..23 Reset Reset DIM
8 27..28 Cyan Reset -
9 0..1 Cyan Reset -
9 27..28 Cyan Reset -
10 0..1 Cyan Reset -
10 1..27 Reset Reset DIM
10 27..28 Cyan Reset -
11 0..1 Cyan Reset -
11 1..6 Reset Reset BOLD
11 27..28 Cyan Reset -
12 0..1 Cyan Reset -
12 27..28 Cyan Reset -
13 0..1 Cyan Reset -
13 12..14 Green Reset -
13 15..17 Red Reset -
13 27..28 Cyan Reset -
14 0..1 Cyan Reset -
14 27..28 Cyan Reset -
15 0..1 Cyan Reset -
15 27..28 Cyan Reset -
16 0..1 Cyan Reset -
16 27..28 Cyan Reset -
17 0..1 Cyan Reset -
17 27..28 Cyan Reset -
18 0..1 Cyan Reset -
18 27..28 Cyan Reset -
19 0..1 Cyan Reset -
19 27..28 Cyan Reset -
20 0..1 Cyan Reset -
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 27..28 Cyan Reset -
22 0..1 Cyan Reset -
22 27..28 Cyan Reset -
23 0..1 Cyan Reset -
23 27..28 Cyan Reset -
24 0..1 Cyan Reset -
24 27..28 Cyan Reset -
25 0..1 Cyan Reset -
25 27..28 Cyan Reset -
26 0..1 Cyan Reset -
26 27..28 Cyan Reset -
27 0..1 Cyan Reset -
27 27..28 Cyan Reset -
28 0..28 Cyan Reset -
29 21..26 Reset Reset DIM
